@@ -4,6 +4,7 @@ Build Date = @BUILDTIME@
 
 Release Details 4.1:
  0:
+  hack in dataset cache=false
   get showRoots -> admin/dataDir working again
   ehcache debugging commands
   catalogWriting.useBytesForDataSize
